#
# Copyright 2020 Staysail Systems, Inc. <info@staystail.tech>
#
# This software is supplied under the terms of the MIT License, a
# copy of which should be located in the distribution where this
# file was obtained (LICENSE.txt).  A copy of the license may also be
# found online at https://opensource.org/licenses/MIT.
#

#  Protocols.
nng_directory(protocol)

add_subdirectory(bus0)
add_subdirectory(pair0)
add_subdirectory(pair1)
add_subdirectory(pipeline0)
add_subdirectory(pubsub0)
add_subdirectory(reqrep0)
add_subdirectory(survey0)

